--- a/synapse-element/element-web/config.json
+++ b/synapse-element/element-web/config.json
@@ -1,8 +1,8 @@
 {
     "default_server_config": {
         "m.homeserver": {
-            "base_url": "https://matrix.example.com",
-            "server_name": "example.com"
+            "base_url": "https://matrix.guirlinger.fr",
+            "server_name": "guirlinger.fr"
         },
         "m.identity_server": {
             "base_url": "https://vector.im"
