--- a/synapse-element/element-web/config.json
+++ b/synapse-element/element-web/config.json
@@ -17,7 +17,7 @@
     "integrations_rest_url": "https://scalar.vector.im/api",
     "integrations_jitsi_widget_url": "https://scalar.vector.im/api/widgets/jitsi.html",
     "bug_report_endpoint_url": "https://riot.im/bugreports/submit",
-    "defaultCountryCode": "GB",
+    "defaultCountryCode": "FR",
     "showLabsSettings": false,
     "features": {
         "feature_pinning": "labs",
