--- a/seafile/docker-compose.yml
+++ b/seafile/docker-compose.yml
@@ -42,7 +42,7 @@
         - SEAFILE_SERVER_HOSTNAME=${TRAEFIK_SEAFILE} # Specifies your host name if https is enabled.
         - SEAFILE_SERVICE_URL=https://${TRAEFIK_SEAFILE}
       networks:
-        - proxy
+        - traefik_proxy
         - seafile-net
       depends_on:
         - db
@@ -60,5 +60,5 @@
 
   networks:
     seafile-net:
-    proxy:
+     traefik_proxy:
       external: true
