--- a/mailserver/compose.yaml
+++ b/mailserver/compose.yaml
@@ -11,7 +11,7 @@ services:
       - "587:587"  # ESMTP (explicit TLS => STARTTLS)
       - "993:993"  # IMAP4 (implicit TLS)
     networks:
-      - mailserver
+      - traefik_proxy
     volumes:
       - ./data/dms/mail-data/:/var/mail/
       - ./data/dms/mail-state/:/var/mail-state/
@@ -32,7 +32,7 @@ services:
     image: traefik/whoami
     container_name: whoami
     networks:
-      - proxy
+      - traefik_proxy
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.whoami.rule=Host(`mail.guirlinger.fr`)"
@@ -41,7 +41,5 @@ services:
       - "traefik.http.routers.whoami.tls=true"
       - "traefik.http.routers.whoami.tls.certresolver=mytlschallenge"
 networks:
-  mailserver:
-      enable_ipv6: true
-  proxy:
+   traefik_proxy:
     external: true
