--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3"
-
 services:
   traefik:
     image: "traefik:latest"
@@ -20,7 +18,7 @@ services:
       - OVH_APPLICATION_SECRET=${OVH_APPLICATION_SECRET}
       - OVH_CONSUMER_KEY=${OVH_CONSUMER_KEY}
     networks:
-      - proxy
+      - traefik_proxy
     labels:
       - "traefik.enable=true"
 
@@ -55,11 +53,11 @@ services:
     environment:
       CONTAINERS: 1
     networks:
-      - proxy
+      - traefik_proxy
     labels:
       # Watchtower Update
       - "com.centurylinklabs.watchtower.enable=true"
 
 networks:
-  proxy:
-    external: true
+   traefik_proxy:
+    enable_ipv6: true
