--- a/webserver/docker-compose.yml
+++ b/webserver/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./data:/usr/local/apache2/htdocs/
     networks:
-      - proxy
+      - traefik_proxy
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.webserver.rule=Host(`${TRAEFIK_WEBSERVER}`)"
@@ -19,5 +19,5 @@ services:
       - "com.centurylinklabs.watchtower.enable=true"
 
 networks:
-  proxy:
+   traefik_proxy:
     external: true
