--- a/freshrss/docker-compose.yml
+++ b/freshrss/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
  freshrss:
     image: 'freshrss/freshrss'
@@ -11,7 +9,7 @@ services:
       - 'CRON_MIN=4,34'
       - 'TZ=Europe/Paris'
     networks:
-      - traefik_proxy
+      - proxy
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.freshrss.rule=Host(`${TRAEFIK_FRESHRSS}`)"
@@ -22,5 +20,5 @@ services:
       - "com.centurylinklabs.watchtower.enable=true"
 
 networks:
-   traefik_proxy:
+   proxy:
     external: true
