--- a/traefik/rules/whitelist.yml
+++ b/traefik/rules/whitelist.yml
@@ -1,7 +1,7 @@
 http:
   middlewares:
     whitelist:
-      ipWhiteList:
+      ipAllowList:
         sourceRange:
           - "0.0.0.0/0"
           # Private IP range use by docker, enable to enable services access through VPN
