--- a/webserver/docker-compose.yml
+++ b/webserver/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+name: webserver
 
 services:
  webserver:
@@ -8,10 +8,10 @@ services:
     volumes:
       - ./data:/usr/local/apache2/htdocs/
     networks:
-      - traefik_proxy
+      - proxy
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.webserver.rule=Host(`${TRAEFIK_WEBSERVER}`)"
+      - "traefik.http.routers.webserver.rule=(Host(`${TRAEFIK_WEBSERVER}`) || Host(`${TRAEFIK_WEBSERVER_ALT}`))"
       - "traefik.http.routers.webserver.entrypoints=https"
       - "traefik.http.routers.webserver.tls=true"
       - "traefik.http.routers.webserver.tls.certresolver=mytlschallenge"
@@ -19,5 +19,5 @@ services:
       - "com.centurylinklabs.watchtower.enable=true"
 
 networks:
-   traefik_proxy:
+   proxy:
     external: true
